# argusaichecker

./: .gitignore  01-product-scope.md  02-reference-research.md  03-fixtures-and-demo-corpus.md  04-rust-project-structure.md  05-data-contracts-and-schemas.md  06-deterministic-engine.md  07-ai-review-layer.md  08-execution-checklist.md  Cargo.toml  MIGRATION.md  compliance_audit_report.json
UI/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
UI/app/: globals.css  layout.tsx  page.tsx
UI/app/results/: page.tsx
UI/app/scan/: page.tsx
UI/app/upload/: page.tsx
UI/app/workspace/: page.tsx
UI/components/ui/: 3d-pin.tsx  ambient-background.tsx  animated-pin-demo.tsx  background-canvas.tsx  beams-background.tsx  dotted-surface.tsx  project-upload-panel.tsx  scan-console.tsx  shiny-button.tsx
policies/: policy-rule.schema.json
policies/gdpr/breach/: art33_1.json
policies/gdpr/data_protection/: art25_1.json  (+2 more)
samples/: policy.json  tokens.json
scripts/: stress_test.sh
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
src/context/: mod.rs  packer.rs  snippet.rs  source_loader.rs
src/ingest/: loader.rs  mod.rs  normalize.rs
src/policy/: compiler.rs  dedupe.rs  matcher.rs  mod.rs  severity.rs
src/ranking/: mod.rs  ranker.rs
src/reporting/: gitlab.rs  json_report.rs  markdown.rs  mod.rs
src/review/: mock.rs  mod.rs  orchestrator.rs  prompt.rs  provider.rs  validator.rs
src/schemas/: layer1.rs  mod.rs  policy.rs  report.rs  review.rs  violations.rs
src/utils/: fs.rs  mod.rs
tests/: integration_test.rs
(+64 files in other folders)
