[package]
name = "argusaichecker"
version = "0.1.0"
edition = "2021"

[lib]
name = "argusaichecker"
path = "src/lib.rs"

[[bin]]
name = "argusaichecker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
regex = "1"
globset = "0.4"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
